Actually fix alignment between item summary section and price summary section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -114,6 +114,7 @@ button {
 
 .item {
     display: flex;
+    justify-content: space-between;
     max-width: 100%;
     padding: 15px;
     padding-right: 0;
@@ -154,7 +155,7 @@ button {
     display: flex;
     flex-direction: column;
     width: 75%;
-    padding: 0 20px;
+    padding: 0 15px;
 }
 
 .item-info-r1 {
